--- a/angular/src/app/home/home.component.css
+++ b/angular/src/app/home/home.component.css
@@ -50,6 +50,16 @@ input[type=text], select {
     background-color: #61e021;
     color: white;
 }
+
+.error-box {
+    display: block;
+    width: 500px;
+    padding: 10px;
+    margin: 10px auto;
+    background-color: #ff7872;
+    box-shadow: inset 0 -0.6em 0 -0.35em rgba(0, 0, 0, 0.17);
+    border-radius: 5px;
+}
 main {
     max-width: 900px;
     margin: 10px auto;
