adding user pixel place screenshot

--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -17,43 +17,42 @@
     <h2>Welcome to the Canvas 2024 Stats page!</h2>
     <p>To see how you did during the event, enter your full username in the search bar above in the format username&#64;instance. It is case-sensitive and matches how your username is display on your profile.</p>
     <p>1972 users from 302 instances participated in the event.</p>
-    <p>insert instances here</p>
     <p>There were 642338 pixels placed on the canvas. Of those pixels, 408881 are the final pixels on the canvas, making the canvas 81.7762% covered at the end of the event. Here are the counts for each color pixel placed:</p>
     <div class="colors-wrapper">
-        <span class="white count">White: {{userColorCount.colors.White}}</span>
-        <span class="count lightGrey">Light Grey: {{userColorCount.colors.LightGrey}}</span>
-        <span class="count mediumGrey">Medium Grey: {{userColorCount.colors.MediumGrey}}</span>
-        <span class="count deepGrey">Deep Grey: {{userColorCount.colors.DeepGrey}}</span>
-        <span class="count darkGrey">Dark Grey: {{userColorCount.colors.DarkGrey}}</span>
-        <span class="count black">Black: {{userColorCount.colors.Black}}</span>
-        <span class="count darkChocolate">Dark Chocolate: {{userColorCount.colors.DarkChocolate}}</span>
-        <span class="count chocolate">Chocolate: {{userColorCount.colors.Chocolate}}</span>
-        <span class="count brown">Brown: {{userColorCount.colors.Brown}}</span>
-        <span class="count peach">Peach: {{userColorCount.colors.Peach}}</span>
-        <span class="count beige">Beige: {{userColorCount.colors.Beige}}</span>
-        <span class="count pink">Pink: {{userColorCount.colors.Pink}}</span>
-        <span class="count magenta">Magenta: {{userColorCount.colors.Magenta}}</span>
-        <span class="count mauve">Mauve: {{userColorCount.colors.Mauve}}</span>
-        <span class="count purple">Purple: {{userColorCount.colors.Purple}}</span>
-        <span class="count darkPurple">Dark Purple: {{userColorCount.colors.DarkPurple}}</span>
-        <span class="count navy">Navy: {{userColorCount.colors.Navy}}</span>
-        <span class="count blue">Blue: {{userColorCount.colors.Blue}}</span>
-        <span class="count azure">Azure: {{userColorCount.colors.Azure}}</span>
-        <span class="count aqua">Aqua: {{userColorCount.colors.Aqua}}</span>
-        <span class="count lightTeal">Light Teal: {{userColorCount.colors.LightTeal}}</span>
-        <span class="count darkTeal">Dark Teal: {{userColorCount.colors.DarkTeal}}</span>
-        <span class="count forest">Forest: {{userColorCount.colors.Forest}}</span>
-        <span class="count darkGreen">Dark Green: {{userColorCount.colors.DarkGreen}}</span>
-        <span class="count green">Green: {{userColorCount.colors.Green}}</span>
-        <span class="count lime">Lime: {{userColorCount.colors.Lime}}</span>
-        <span class="count pastelYellow">Pastel Yellow: {{userColorCount.colors.PastelYellow}}</span>
-        <span class="count yellow">Yellow: {{userColorCount.colors.Yellow}}</span>
-        <span class="count orange">Orange: {{userColorCount.colors.Orange}}</span>
-        <span class="count rust">Rust: {{userColorCount.colors.Rust}}</span>
-        <span class="count maroon">Maroon: {{userColorCount.colors.Maroon}}</span>
-        <span class="count rose">Rose: {{userColorCount.colors.Rose}}</span>
-        <span class="count red">Red: {{userColorCount.colors.Red}}</span>
-        <span class="count watermelon">Watermelon: {{userColorCount.colors.Watermelon}}</span>
+        <span class="white count">White: 55152</span>
+        <span class="count lightGrey">Light Grey: 20011</span>
+        <span class="count mediumGrey">Medium Grey: 13057</span>
+        <span class="count deepGrey">Deep Grey: 12730</span>
+        <span class="count darkGrey">Dark Grey: 12810</span>
+        <span class="count black">Black: 119468</span>
+        <span class="count darkChocolate">Dark Chocolate: 5388</span>
+        <span class="count chocolate">Chocolate: 8724</span>
+        <span class="count brown">Brown: 6996</span>
+        <span class="count peach">Peach: 4138</span>
+        <span class="count beige">Beige: 8040</span>
+        <span class="count pink">Pink: 23204</span>
+        <span class="count magenta">Magenta: 8536</span>
+        <span class="count mauve">Mauve: 6421</span>
+        <span class="count purple">Purple: 12185</span>
+        <span class="count darkPurple">Dark Purple: 10896</span>
+        <span class="count navy">Navy: 27663</span>
+        <span class="count blue">Blue: 34210</span>
+        <span class="count azure">Azure: 32045</span>
+        <span class="count aqua">Aqua: 28753</span>
+        <span class="count lightTeal">Light Teal: 5153</span>
+        <span class="count darkTeal">Dark Teal: 5216</span>
+        <span class="count forest">Forest: 5975</span>
+        <span class="count darkGreen">Dark Green: 12810</span>
+        <span class="count green">Green: 15535</span>
+        <span class="count lime">Lime: 4168</span>
+        <span class="count pastelYellow">Pastel Yellow: 12417</span>
+        <span class="count yellow">Yellow: 35911</span>
+        <span class="count orange">Orange: 12336</span>
+        <span class="count rust">Rust: 7950</span>
+        <span class="count maroon">Maroon: 4887</span>
+        <span class="count rose">Rose: 8750</span>
+        <span class="count red">Red: 54053</span>
+        <span class="count watermelon">Watermelon: 3711</span>
     </div>
     <p>The coordinate with the most pixels placed on was (10,262) with 1427 placed. The users who placed pixels on (10,262) are:</p>
         <ul>
