--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -65,7 +65,9 @@
             <li>EXtremeExploit&#64;lemmy.world: 1 time</li>
             <li>hdggDalton&#64;toast.ooo: 1 time</li>
         </ul>
-    
+        <hr />
+        <p>If you would like an image for just the pixels you placed, such as the example shown below, send me a DM at <a href="https://sh.itjust.works/u/the_real_monte">&#64;the_real_monte&#64;sh.itjust.works</a>. I can make the background color white or black.</p>
+    <img src="https://raw.githubusercontent.com/TheRealMonte/therealmonte.github.io/main/screenshots/user_pixel_demo.PNG" alt="An example of just one user's pixels." class="pixel-demo" />
 </main>
 }
 @if (showResults) {
@@ -120,6 +122,8 @@
         <span class="count red">Red: {{userColorCount.colors.Red}}</span>
         <span class="count watermelon">Watermelon: {{userColorCount.colors.Watermelon}}</span>
     </div>
+    <hr />
+    <p>If you would like an image for just the pixels you placed, such as the example shown below, send me a DM at <a href="https://sh.itjust.works/u/the_real_monte">&#64;the_real_monte&#64;sh.itjust.works</a>. I can make the background color white or black.</p>
     <hr />
     <p>More features coming soon... maybe</p>
 </main>
