--- a/angular/src/app/home/home.component.css
+++ b/angular/src/app/home/home.component.css
@@ -77,6 +77,10 @@ main {
     border-radius: 5px;
     background-color: white;
 }
+.btn-wrapper {
+    display: flex;
+    justify-content: center;
+}
 
 .colors-wrapper {
     display: flex;
