uploading 2023 csv files, working on app

--- a/angular/src/app/footer/footer.component.css
+++ b/angular/src/app/footer/footer.component.css
@@ -3,6 +3,21 @@ footer {
     justify-content: center;
     flex-wrap: wrap;
 }
+footer a {
+    color: black;
+    text-decoration: none;
+    margin: 10px;
+    font-size: 15p;
+    vertical-align:middle;
+}
+footer a:hover {
+    text-decoration: underline;
+}
 footer span {
     margin: 5px 10px;
+}
+.material-symbols-outlined {
+    vertical-align:middle;
+    margin: 2px !important;
+    font-size: 19px !important;
 }
