--- a/angular/src/app/footer/footer.component.html
+++ b/angular/src/app/footer/footer.component.html
@@ -1,4 +1,14 @@
 <footer>
-    <span>Message me: <a href="https://sh.itjust.works/u/the_real_monte">the_real_monte&#64;sh.itjust.works</a></span>
-    <span>View the code for this web app on <a href="https://github.com/TheRealMonte/therealmonte.github.io">GitHub</a></span>
+        <a href="https://sh.itjust.works/u/the_real_monte">
+            <i class="fa-regular fa-envelope"></i> Message me
+        </a>
+        
+<a href="https://github.com/TheRealMonte/therealmonte.github.io">
+    <i class="fa-brands fa-github"></i> GitHub Repo</a>
+<a href="#">
+    <i class="fa-brands fa-mastodon"></i> Updates
+</a>
+<a href="#">
+    <i class="fa-solid fa-square-rss"></i> RSS
+</a>
 </footer>
